k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helep
  labels:
    app.kubernetes.io/managed-by: helm
    project: helep
