k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helep-ingress
  namespace: helep
  labels:
    app.kubernetes.io/part-of: helep
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /api/sos(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sos-service
                port:
                  number: 8002
          - path: /api/dispatch(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dispatch-service
                port:
                  number: 8003
          - path: /api/notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 8004
          - path: /api/analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
